# FuckAIZZ

./: .gitignore  README.md  index.html  package-lock.json  package.json  tauri-desktop-dev-plan.md
.github/workflows/: release.yml
scripts/: check-release-secrets.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  provider.rs  report.rs  test_run.rs
src-tauri/src/core/: cost.rs  mod.rs  models.rs  openai_compat.rs  pricing_catalog.rs  runner.rs  safety.rs
src-tauri/src/storage/: reports.rs
src/services/: modelPricing.ts  pricing.ts  promptLibrary.ts  tauriApi.ts
src/styles/: app.css
