[package]
name = "ai-transfer-quota-auditor"
version = "0.1.1"
description = "Local-first desktop auditor for AI transfer platform quota billing."
authors = ["wnluo"]
edition = "2021"

[lib]
name = "ai_transfer_quota_auditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-transfer-quota-auditor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1.45.1", features = ["net", "time"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
